// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton component should match a snapshot 1`] = `
<button
  className="icon-button-container"
>
  <Icon
    icon="add"
  />
</button>
`;

exports[`IconButton component should match a snapshot when disabled 1`] = `
<button
  className="icon-button-container disabled-button"
  disabled={true}
>
  <Icon
    icon="add"
  />
</button>
`;

exports[`IconButton component should match a snapshot when in dark mode 1`] = `
<button
  className="icon-button-container dark-mode-button"
>
  <Icon
    color="white"
    icon="add"
  />
</button>
`;
